src/objects/PastActivity__c.object
<CustomObject>
    <description>Object that contains past activity with client</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Past_Activitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Activity_With_Client__c</fullName>
        <formula>IF((b__c - cc__c) == 0, 0.00, (b__c - cc__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <formula>b__c / a__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>a__c</fullName>
        <label>Total Client ICT Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>b__c</fullName>
        <label>Our Total Revenue from Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc__c</fullName>
        <label>Our Expenditures with Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>Fecha de Cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>initDate__c</fullName>
        <label>Fecha de Inicio</label>
        <type>Date</type>
    </fields>
    <label>SCP Past Activity</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Past Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>